# zenoh-recorder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  NOTICE  PRODUCTION_READY.md  README.md  SECURITY.md  audit.toml  build.rs  docker-compose.test.yml  test.env
.github/workflows/: ci.yml  nightly.yml  quick-check.yml  release.yml
config/: README.md  default.toml  default.yaml
config/examples/: filesystem.toml  filesystem.yaml  high-performance.toml  high-performance.yaml  reductstore.toml  reductstore.yaml  schema-enabled.toml  schema-enabled.yaml
docs/: CI_CD.md  CONFIG_AND_STORAGE_DESIGN.md  CONFIG_IMPLEMENTATION.md  CONTRIBUTING.md  CUSTOM_PROTO_DESIGN.md  RECORDER_DESIGN.md
examples/: custom_proto_usage.rs  docker-compose.yml  test_client.rs
proto/: sensor_data.proto
scripts/: run_tests_with_docker.sh
src/: buffer.rs  control.rs  lib.rs  main.rs  mcap_writer.rs  protocol.rs  recorder.rs  storage.rs
src/config/: loader.rs  mod.rs  types.rs
src/storage/: backend.rs  factory.rs  filesystem.rs  mod.rs  reductstore.rs
tests/: advanced_integration_tests.rs  buffer_tests.rs  comprehensive_coverage_tests.rs  config_integration_tests.rs  control_interface_tests.rs  control_unit_tests.rs  e2e_docker_tests.rs  edge_case_coverage_tests.rs  edge_case_tests.rs  final_coverage_tests.rs  integration_tests.rs  mcap_serialization_tests.rs  mcap_tests.rs  protocol_tests.rs  recorder_state_tests.rs  storage_client_tests.rs  storage_comprehensive_tests.rs  storage_integration_tests.rs  storage_tests.rs
