[workspace]

[package]
name = "zenoh-recorder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["coScene"]
description = "High-performance Zenoh data recorder with multi-backend storage support"
repository = "https://github.com/coscene-io/zenoh-recorder"
keywords = ["zenoh", "recorder", "mcap", "reductstore", "time-series"]
categories = ["development-tools", "network-programming"]

[dependencies]
zenoh = "0.11"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mcap = "0.9"
prost = "0.12"
prost-types = "0.12"
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5"
crossbeam = "0.8"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1"
lz4 = "1.24"
zstd = "0.13"
serde_yaml = "0.9"
regex = "1"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "zenoh-recorder"
path = "src/main.rs"

