[workspace]

[package]
name = "zenoh-recorder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["coScene"]
description = "High-performance Zenoh data recorder with multi-backend storage support"
repository = "https://github.com/coscene-io/zenoh-recorder"
keywords = ["zenoh", "recorder", "mcap", "reductstore", "time-series"]
categories = ["development-tools", "network-programming"]

[dependencies]
# Zenoh 1.6+ with updated API (see ZENOH_1.X_MIGRATION.md for changes)
zenoh = "1.6"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mcap = "0.23.3"
prost = "0.14.1"
prost-types = "0.14.1"
reqwest = { version = "0.12.24", features = ["json"] }
dashmap = "6.1.0"
crossbeam = "0.8.2"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2.0"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1"
lz4 = "1.24"
zstd = "0.13"
toml = "0.9.8"
regex = "1"
clap = { version = "4.5.34", features = ["derive"] }

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "zenoh-recorder"
path = "src/main.rs"

